Fixed dark mode colors and background not overflwoing.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: whitesmoke;
-  height: 100vh;
+  height: 100%;
+  overflow:auto;
 }
 
 a {
